chore: eosdash improve plan display (#739)
* chore: improve plan solution display

Add genetic optimization results to general solution provided by EOSdash plan display.

Add total results.


* fix: genetic battery and home appliance device simulation

Fix genetic solution to make ac_charge, dc_charge, discharge, ev_charge or
home appliance start time reflect what the simulation was doing. Sometimes
the simulation decided to charge less or to start the appliance at another
time and this was not brought back to e.g. ac_charge.

Make home appliance simulation activate time window for the next day if it can not be
run today.

Improve simulation speed.


---------
